app/static/css/style.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #111010;
    color:white;
}

header {
    background-color: #000000;
    color: #fff;
    padding: 20px;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
nav .navbar-brand{
    color: #e0d8d8;
    font-size:20px;
    font-weight: bold;
}
nav ul {
    list-style-type: none;
    display:flex;
    margin: 0;
    padding: 0;
}
.source-link{
    color: #258eb8;
    text-decoration: none;
}
nav ul li {
    display: inline;
    margin-right: 10px;
}

nav ul li a {
    color: #e0d8d8;
    text-decoration: none;
}

main {
    padding: 20px;
}

footer {
    background-color: #000000;
    color: #e0d8d8;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-inline: 100px;

}
.intro-banner {
    padding-top: 20px;
    background-color: white;
    color: #3e3e3e;
    padding-left: 100px;
    font-size: 24px;
    text-align: left;
    padding-bottom: 20px;
    
}
.hey {
    display: block;
    text-align: left;
    font-weight: bold;
    
}
.centered-circle-image {
    padding-top: 80px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top:20px;
}

.centered-circle-image img {
    border-radius: 50%;
    width:100px;
    height:100px;
    object-fit:cover;
}



.big-heading {
    padding-top: 20px;
    font-size: 58px;
    text-align: center;
    margin-top: 20px;
    color:#e0d8d8;
    font-weight: bold;

}

.small-heading{
    padding-top: 20px;
    font-size: 28px;
    text-align: center;
    margin-top: 20px;
    color:#e0d8d8;
    
}

html, body {
    height: 100%;
    margin: 0;
    padding: 0;
}

.wrapper {
    min-height: 100%;
    display: flex;
    flex-direction: column;
}

main {
    flex: 1;
}

.social-links {
    padding-top: 40px;
    text-align: center;
    margin-top: 20px;
    padding-bottom: 300px;
}

.social-links a {
    margin: 0 10px;
    color: #e0d8d8; 
    font-size: 24px; 
}

.social-links a:hover {
    color: #e0d8d8; 
}

.main-container {
    background-color: white; 
}

.timeline {
    color: rgb(42, 42, 42);
    height: 34px;
    line-height: 34px; 
    text-align: center; 
}

.timeline-container {
    position: relative;
    height: 1600px;
    padding-top: 20px; 
    padding-bottom: 50px; 
}

.vertical-line {
    position: absolute;
    left: 50%;
    top: 0;
    bottom: 0;
    width: 4px; 
    background: linear-gradient(to bottom,transparent ,black  , black,black,black,black);
    transform: translate(-50%);
}

.circle-point {
    position: absolute;
    left: 50%; 
    width: 60px; 
    height: 60px; 
    background-color: black;
    border-radius: 50%; 
    z-index: 1;
    transform: translate(-50%);
    overflow: hidden
}
@media (max-width: 768px) {
    .circle-point {
        width: 50px; 
        height: 50px;
    }
}

@media (max-width: 480px) {
    .circle-point {
        width: 40px; 
        height: 40px;
    }
}

.circle-point img {
    width: 100%; 
    height: 100%; 
    object-fit: cover; 
    border-radius: 50%; 
}
.Portfolio {
    padding-top: 40px;
    font-size: 38px;
    text-align: center;
    padding-bottom: 40px;
    font-family: 'Roboto', Helvetica, sans-serif;
}

.timeline {
    background-color: white;
    padding-top: 20px;
    font-size: 30px;
    color: rgb(36, 36, 36);
    height: 100px;
    line-height: 34px; 
    text-align: center; 
}

.right-text-point{
    position: absolute;
    left:calc(50% + 40px);
    top:140px;
    white-space: nowrap;
    color: #424242;
    font-size: 14px;
    z-index: 2;
}

.circle-point, .content-point {
    position: absolute;
    left: 50%; 
    transform: translateX(-50%);
}
.content-point .square {
    width: 400px;
    height: 300px;
    padding: 20px;
    box-sizing: border-box;
    background-color: rgb(255, 255, 255);
    margin-left: -540px; 
    color: #292929;
    font-family: 'Roboto', 'Helvetica', sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
    border-radius: 20px;
    overflow: hidden;
}


@media (max-width: 768px) {
    .content-point .square {
        width: 100%; 
        margin-left: 0; 
        padding: 10px; 
    }
    .content-point .square h3{
        font-size: 24px;
        margin-top: 0;
        margin-bottom: 10px;
    }
    .content-point .square p{
        font-size: 14px;
        line-height: 1.4;
    }
}


@media (max-width: 480px) {
    .content-point .square {
        padding: 5px; 
    }
    .content-point .square h3{
        font-size: 20px;
        margin-bottom: 5px;
    }
    .content-point .square p{
        font-size: 12px;
        line-height: 1.3;
    }
}


.content-point h3 {
    margin-bottom: 10px;
    font-size: 24px;
}
.content-point p {
    font-size: 16px;
    line-height: 1.5;
}


.left-text-point{
    position: absolute;
    right:calc(50% + 40px);
    top:140px;
    white-space: nowrap;
    color: #424242;
    font-size: 14px;
    z-index: 2;
}


.content-point .right-square {
    width: 400px;
    height: 300px;
    padding: 20px;
    box-sizing: border-box;
    background-color: rgb(255, 255, 255);
    margin-left: 640px; 
    color: #292929;
    font-family: 'Roboto', 'Helvetica', sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
    border-radius: 20px;
    overflow: hidden;
}


@media (max-width: 768px) {
    .content-point .right-square {
        width: 100%; 
        margin-left: 0; 
        padding: 10px; 
    }
    .content-point .right-square h3 {
        font-size: 24px;
        margin-top: 0;
        margin-bottom: 10px;
    }
    .content-point .right-square p{
        font-size: 14px;
        line-height: 1.4;
    }
}


@media (max-width: 480px) {
    .content-point .right-square {
        padding: 5px; 
    }
    .content-point .right-square h3{
        font-size: 20px;
        margin-bottom: 5px;
    }
    .content-point .right-square p {
        font-size: 12px;
        line-height: 1.3;
    }
}


.contact-container {
    padding-top: 40px;
    margin-left: 80px;
    padding-bottom: 40px;
}
.contact-container h2 {
    color: #bbbbbb;
}
.contact-container p {
    color: #bbbbbb;
    margin-top: 0;
    margin-bottom: 4px;
}

.contact-email .contact-label { 
    color: #bbbbbb;
}

.email-link { 
    color: rgb(9, 138, 185);
}

.social-link { 
    color: rgb(9, 138, 185); 
}


.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding: 20px;
    
}

.project-card {
    background-color: #18344A;
    color: white;
    padding: 20px;
    margin: 20px;
    width: 300px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    transition: transform 0.2s;
    z-index: 1;
    border-radius: 10px;
}
.cardcolor {
    background-color: #2278ba;
}
    
    
 

.project-card:hover {
    transform: scale(1.05);
}

.project-card img {
    width: 50%;
    height: 50%;
    margin-bottom: 20px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}


.project-card h2 {
    text-align: left;
}

.project-card p {
    text-align: justify;
}

.button {
    display: block;
    width: 100%;
    padding: 10px;
    margin-top: 20px;
    background: #ffffff;
    color: #0a74db;
    text-align: center;
    text-decoration: none;
    font-weight: bold;
}

.button:hover {
    background: #f0f0f0;
}

.Resume_container {
    display: flex;
    justify-content: center;
}

.Resume_image {
    position: relative;
    width: 50%;
}

.Resume_image img {
    width: 100%;
    display: block;
}

.Download_button {
    position: absolute;
    top: 0;
    right: 0;
    background: none;
    border: none;
    cursor: pointer;
}

.Download_button button {
    background: none;
    border: none;
    cursor: pointer;
    font-size: 1.5em; 
}

